# goit-pythonweb-hw-12

./: .env.example  .gitignore  README.md  alembic.ini  coverage.txt  docker-compose.yaml  main.py  pyproject.toml
api/: exceptions.py  schemas.py
api/routes/: contacts.py
database/: models.py  session_manager.py
docs/: conf.py  index.rst  src.api.routes.rst  src.api.rst  src.database.rst  src.repository.rst  src.rst  src.services.rst
docs/_build/: index.md  modules.md  src.api.md  src.api.routes.md  src.conf.md  src.database.md  src.md  src.repository.md  src.services.md
etc/: config.py
migrations/: env.py
migrations/versions/: 344b86dfad19_add_is_confirmed_to_user.py  4ce16f289b99_add_is_confirmed_to_user.py  50158d76c431_init.py  78dc1da6df56_update_birthday_field.py  7e49812bcf5a_created_users_table_and_its_relations_.py  84e37486a6e2_added_user_roles.py  ad4112b8cd11_added_avatar_column_to_user.py  dcef931335da_add_timezone_to_created_at_and_updated_.py
repository/: contacts.py
services/: contacts.py
src/api/: dependencies.py  exceptions.py  schemas.py
src/api/routes/: auth.py  contacts.py  users.py
src/conf/: config.py
src/database/: models.py  session_manager.py
src/repository/: contacts.py  users.py
src/services/: auth.py  cache.py  contacts.py  crypt.py  email.py  media.py  users.py
src/templates/: email_confirmation.html  password_reset.html
tests/: conftest.py
tests/integration/: test_api_auth.py  test_api_contacts.py  test_api_users.py
tests/unit/: contact_repository_test.py  user_repository_test.py
